--- a/Covid-19 Dashboard.Rmd
+++ b/Covid-19 Dashboard.Rmd
@@ -9,6 +9,8 @@ output:
 
 ```{r setup, include=FALSE}
 library(flexdashboard)
+library(htmltools)
+library(htmlwidgets)
 library(ggplot2)
 library(dplyr)
 library(DT)
@@ -19,24 +21,34 @@ library(plotly)
 library(zoo)
 library(scales)
 library(shiny)
-install.packages("flexdashboard")
-install.packages("ggplot2")
+library(rsconnect)
+library(gapminder)
+library(sp)
+library(stats)
 ```
-
+ 
 
 ```{r, include=FALSE}
 data <- read.csv('https://covid.ourworldindata.org/data/owid-covid-data.csv', header = T)
-
+deployApp()
 ```
 
 ```{r, echo = F}
 cum_dat <- data %>%
   filter(as.Date(date) == max(as.Date(date))) %>%
     select(iso_code,
-           Country = location, 
+           Country = location,
+           continent,
            Population = population, 
            Cases = total_cases,
-           Deaths = total_deaths) %>%
+           Deaths = total_deaths,
+           population_density,
+           median_age,
+           gdp_per_capita,
+           extreme_poverty,
+           cvd_death_rate,
+           diabetes_prevalence,
+           life_expectancy) %>%
   mutate(Mortality = round(Deaths/Cases*100, 3)) %>%
   arrange(desc(Cases))
 ```
@@ -147,9 +159,7 @@ fig <- fig %>% layout(autosize = T,
                       # width = 500, 
                       # height = 500,
                        geo = g)
-
 fig
-
 ```
 
 
@@ -177,38 +187,70 @@ Total Cases By Country
 Column {.sidebar}
 -------------------------------------
 ```{r}
-# Countries input
-selectInput("groups", "Select", c("First Ten Countries", "First Twenty Countries", "Top Ten Countries", "Top Twenty Countries", "Random Ten Countries", "All Countries"))
-```
-
-
-Column 
--------------------------------------
-### Growth Comparison
-```{r}
 # Dataset
 by_days <- data %>% group_by(location) %>% filter(total_cases >= 1, location != "World") %>%
   mutate(days = as.numeric(-rev(difftime(as.Date(date), max(as.Date(date)), units = "days"))),
          new_cases_SMA7 = rollmean(new_cases, k = 7, align = "center", fill = NA)) %>%
   select(location, total_cases, days, population, new_cases, continent, new_cases_SMA7)
-# Rand <-
-# Top_Twen <-
 
+
+selectInput("c_1", "Select a country", sort(unique(by_days$location)), selected = 'United States')
+selectInput("c_2", "Add a country", sort(unique(by_days$location)), selected = 'Brazil')
+selectInput("c_3", "Add a country", sort(unique(by_days$location)), selected = 'India')
+selectInput("c_4", "Add a country", sort(unique(by_days$location)), selected = 'Italy')
+selectInput("c_5", "Add a country", sort(unique(by_days$location)), selected = 'Philippines')
+selectInput("c_6", "Add a country", sort(unique(by_days$location)), selected = 'South Africa')
+selectInput("c_7", "Add a country", sort(unique(by_days$location)), selected = 'China')
+selectInput("c_8", "Add a country", sort(unique(by_days$location)), selected = 'Japan')
+selectInput("c_9", "Add a country", sort(unique(by_days$location)), selected = 'Germany')
+selectInput("c_10", "Add a country", sort(unique(by_days$location)), selected = 'Lebanon')
 ```
 
 
+Column 
+-------------------------------------
+### Growth Comparison by Population Proportion
+
 ```{r}
-fig <- plot_ly(by_days, x = ~days, y = ~total_cases/population * 100, color = ~location, type = "scatter", mode = "lines")
+plotly::renderPlotly({
+fig <- plot_ly(by_days[which(by_days$location %in% c(input$c_1,
+                                             input$c_2,
+                                             input$c_3,
+                                             input$c_4,
+                                             input$c_5,
+                                             input$c_6,
+                                             input$c_7,
+                                             input$c_8,
+                                             input$c_9,
+                                             input$c_10)),], x = ~days, y = ~total_cases/population*100, color = ~location, type = "scatter", mode = "lines")
 fig <- layout(fig, yaxis = list(title = "Percent (%) of Total Population Infected"), xaxis = list(title = "Days Since First Case"))
 fig
+})
+
 ```
 
- 
+Row
+-------------------------------------
+### Growth Comparison by Infection Size
+
 ```{r}
-fig <- plot_ly(by_days, x = ~days, y = ~total_cases, color = ~location, type = "scatter", mode = "lines")
-fig <- layout(fig, yaxis = list(title = "Total Cases (log)",type = "log"))
-fig
+plotly::renderPlotly({
+fig <- plot_ly(by_days[which(by_days$location %in% c(input$c_1,
+                                             input$c_2,
+                                             input$c_3,
+                                             input$c_4,
+                                             input$c_5,
+                                             input$c_6,
+                                             input$c_7,
+                                             input$c_8,
+                                             input$c_9,
+                                             input$c_10)),], x = ~days, y = ~total_cases, color = ~location, type = "scatter", mode = "lines")
+fig <- layout(fig, yaxis = list(title = "Total Cases (log)",type = "log"), xaxis = list(title = "Days Since First Case"))
+fig})
+
+
 ```
+
 
 Growth By Country
 ===================================== 
@@ -247,27 +289,62 @@ plotly::renderPlotly({
 ```
 
 
-Timeline of Cases
+Explanatory Factors
 ===================================== 
 
 Column {.sidebar}
 -------------------------------------
 ```{r}
+selectInput("Independent", "Select the variable for the X-axis (Explanatory Variable)", choices = c("Population Density", "Median Age", "GDP per Capita", "Extreme Poverty", "CVD Death Rate", "Diabetes Prevalence", "Life Expectancy"), selected = "GDP per Capita")
 
+selectInput("Dependent", "Select the variable for the Y-axis (Dependent Variable)",  choices = c("Cases", "Deaths", "Mortality"), selected = "Mortality")
 
-
+selectInput("y_scale", "Select the scale of the y-axis", choices = c("linear", "log"), selected = "linear")
+selectInput("x_scale", "Select the scale of the x-axis", choices = c("linear", "log"), selected = "linear")
 ```
 
-
-Column 
+Column
 -------------------------------------
+
 ```{r}
+indep <- reactive({
+if ( "Population Density" %in% input$Independent) return(cum_dat[which(cum_dat$Country != "World"),]$population_density)
+if ( "Median Age" %in% input$Independent) return(cum_dat[which(cum_dat$Country != "World"),]$median_age)
+if ( "GDP per Capita" %in% input$Independent) return(cum_dat[which(cum_dat$Country != "World"),]$gdp_per_capita)
+if ( "Extreme Poverty" %in% input$Independent) return(cum_dat[which(cum_dat$Country != "World"),]$extreme_poverty)
+if ( "CVD Death Rate" %in% input$Independent) return(cum_dat[which(cum_dat$Country != "World"),]$cvd_death_rate)
+if ( "Diabetes Prevalence" %in% input$Independent) return(cum_dat[which(cum_dat$Country != "World"),]$diabetes_prevalence)
+if ( "Life Expectancy" %in% input$Independent) return(cum_dat[which(cum_dat$Country != "World"),]$life_expectancy)
+  })
 
+dep <- reactive({
+if ( "Cases" %in% input$Dependent) return(cum_dat[which(cum_dat$Country != "World"),]$Cases)
+if ( "Deaths" %in% input$Dependent) return(cum_dat[which(cum_dat$Country != "World"),]$Deaths)
+if ( "Mortality" %in% input$Dependent) return(cum_dat[which(cum_dat$Country != "World"),]$Mortality)
+  })
 
-
-
+renderPlotly({
+ fig <- cum_dat[which(cum_dat$Country != "World"),] %>% plot_ly(x = ~indep(), y = ~dep(), color = ~continent, text = ~Country, hoverinfo = "text", type = 'scatter', mode = 'markers', tendline = "ols")
+ fig <- fig %>% layout(yaxis = list(title = input$Dependent,type = input$y_scale), xaxis = list(title = input$Independent, type = input$x_scale))
+ fig
+})
 ```
 
 
 Additional Information
 =====================================
+
+  
+The dataset was obtained by Our World in Data and can be obtained here:   https://github.com/owid/covid-19-data/tree/master/public/data.  
+  
+The purpose of this project was to implement newly developed skills in R with Flexdashboard and the shiny app; in addition, it was used to explore some of the mathematical models in epidemiology.  
+  
+Hopefully this app has provided useful information and that the information is presented in a way which is easily understood. More information will be added into this section regarding the mathematical models surrounding diseases and infections including a possible simulation done in NetLogo or R.  
+  
+For more information on the disease itself:  
+  https://www.who.int/emergencies/diseases/novel-coronavirus-2019  
+  https://www.cdc.gov/
+  
+Github:  https://github.com/CuddlyCuddle  
+  
+  
